--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   http: ^0.12.2
   flutter_launcher_icons: "^0.8.0"
+  flutter_masked_text: ^0.8.0
 
 flutter_icons:
   android: "launcher_icon"
